# AGEINT

./: .gitignore  AGENTS.md  ISA.md  README.md  coverage_project.json  domain_profile.yaml  pyproject.toml  tasks.yaml
data/: AGENTS.md  README.md  agency_source_packs.yaml  concept_routes.yaml  concept_routes_supplement.yaml  coursebook_profiles.yaml  manuscript_architecture.yaml  research_source_packs.yaml  safety_artifact_tables.yaml  source_support_expansion.yaml  topic_prompt_routes.yaml  topic_risk_routes.yaml  topic_rotation_templates.yaml  unit_education_profiles.yaml
docs/: AGENTS.md  README.md  accessibility_rights_review.md  adversarial_assurance.md  agent_incident_response.md  agent_instructions.md  architecture.md  citation_expansion_2026_06_16.md  citation_workflow.md  data_lineage_registry.md  evidence_package_map.md  faq.md  forking_guide.md  instructor_guide.md  learner_support_assessment.md  orchestration_contract.md  output_conventions.md  output_inventory.md  procurement_vendor_governance.md  publication_readiness.md  quickstart.md  records_retention_audit.md  release_change_control.md  rendering_pipeline.md  research.md  safety.md  safety_audit.md  source_identity_stability.md  source_lane_map.md  source_refresh_ledger.md  style_guide.md  syntax_guide.md  testing_philosophy.md  thermo_nuclear_code_quality_review.md  transparency_notice_workflow.md  troubleshooting.md  v2_expansion_map.md
manuscript/: AGENTS.md  README.md  SYNTAX.md  config.yaml  config.yaml.example  preamble.md  references-research-anchors-001-050.bib  references-research-anchors-051-100.bib  references-research-anchors-101-150.bib  references-research-anchors-151-172.bib  references-research-anchors-151-186.bib  references-research-anchors-151-200.bib  references-research-anchors-201-224.bib  references-research-anchors-201-248.bib  references-research-anchors-201-250.bib  references-research-anchors-251-300.bib  references-research-anchors-301-350.bib  references-research-anchors-351-400.bib  references-research-anchors-401-450.bib  references-research-anchors-451-462.bib  references-source-guide-001-050.bib  references-source-guide-051-100.bib  references-source-guide-101-150.bib  references-source-guide-151-200.bib  references-source-guide-201-250.bib  references-source-guide-251-296.bib  references-source-guide-251-300.bib  references-source-guide-301-312.bib  references-source-quality.bib
output/: AGENTS.md  README.md
scripts/: AGENTS.md  CONVENTIONS.md  README.md  audit_agency_source_coverage.py  audit_artifact_evidence.py  audit_claim_calibration.py  audit_heading_support.py  audit_orchestration_contract.py  audit_pdf_quality.py  audit_publication_readiness.py  audit_reference_quality.py  audit_scholarship_quality.py  audit_source_metadata.py  audit_source_refresh_due.py  build_curriculum.py  check_rendered_references.py  count_citations.py  generate_coursebook_profiles_yaml.py  generate_figures.py  generate_prompt_parity_fixture.py  generate_risk_routes_yaml.py  generate_rotation_parity_fixture.py  generate_safety_artifact_tables_yaml.py  generate_topic_prompt_routes_yaml.py  generate_topic_rotation_templates_yaml.py  setup_hook.py  validate_declarative_yaml.py  z_generate_manuscript_variables.py
src/: AGENTS.md  README.md  __init__.py  _curriculum_shards.py  _data_loaders.py  _jsonl.py  _markdown_split.py  _package_loader.py  _paths.py  _slug.py  agency_source_coverage.py  analysis_validation.py  artifact_evidence.py  audit_contracts.py  build_pipeline.py  citation_workflow.py  claim_calibration.py  curriculum.py  manuscript_injection.py  manuscript_templates.py  markdown_cell.py  markdown_refs.py  orchestration_audit.py  orchestration_contracts.py  output_docs.py  pdf_quality.py  prose_policy.py  publication_readiness.py  reference_quality.py  rendered_heading_support.py  rendered_reference_audit.py  safety_contract.py  (+8 more)
(+1405 files in other folders)
